app/src/index.css
@import "../node_modules/material-components-web/dist/material-components-web.css";

:root {
  --mdc-theme-primary: #009688;
  --mdc-theme--background: #00212B;
  --mdx-theme--accent: #009688;
  --editor-background: #002B36;
}

body {
  margin: 0;
  padding: 0;
}

main {
  padding: 0 !important;
  height: 100vh;
}

.mdc-layout-grid__inner {
  grid-gap: 0 !important;
  height: 100%;
}

#logo {
  margin-right: -24px;
}

.mdc-snackbar {
  z-index: 2;
}

sidebar {
  background: var(--mdc-theme--background);
  z-index: 1;
}

sidebar > .content {
  padding: 0 20px;
  display: flex;
  flex-direction: column;
}

sidebar .mdc-switch {
  margin-top: 30px;
}

sidebar .source-dest > .mdc-select {
  margin-top: 20px;
}

/* Get open menu above Ace red cursor */
sidebar .mdc-simple-menu--open {
  z-index: 1000;
}

#button-parent {
  margin-top: 20px;
}

#button-parent button {
  float: right;
}

.cli-hint {
  color: white;
  float: left;
}

.cli-hint p {
  color: white;
  opacity: 0.5;
  margin: 0 0 4px 0;
  font-size: 11pt;
}

.cli-hint pre {
  margin: 0;
  font-size: 12pt;
  font-family: Consolas, Menlo, monospace;
}

sidebar .mdc-select:first-child {
  margin-right: 20px;
}

#json-editor {
  font-size: 10pt;
  margin-top: 10px;
  border-radius: 3px;
  width: inherit !important;
}

#output-editor {
  z-index: 0;
  width: 100% !important;
  height: 100% !important;
  margin: 0;
  font-size: 11pt !important;
  font-family: Consolas, Menlo, monospace;
}

#output-editor .ace_gutter {
  color: black;
  opacity: 0.3;
  background: white;
}

#output-editor .ace_fold-widget {
  display: none;
}

